// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/common/UpdatedContent should render faded content when loading 1`] = `
.c0 {
  opacity: 0.65;
  pointer-events: none;
}

<div>
  <div
    class="c0"
  >
    CONTENT
  </div>
</div>
`;

exports[`components/common/UpdatedContent should render standard content when not loading 1`] = `
<div>
  CONTENT
</div>
`;
